# VulkanSC-Emulation

./: .clang-format  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  GETTING_STARTED.md  README.md  REUSE.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.reuse/: dep5
icd/: CMakeLists.txt  README.md  VKSC_emulation.def  icd_defs.h  icd_env_helper.cpp  icd_env_helper.h  icd_extension_helper.cpp  icd_extension_helper.h  icd_fault_handler.cpp  icd_fault_handler.h  icd_log.cpp  icd_log.h  icd_main.cpp  icd_object_tracker.h  icd_pipeline_cache_data.cpp  icd_pipeline_cache_data.h  icd_pnext_chain_utils.h  icd_proc_addr.h  icd_shadow_stack.cpp  icd_shadow_stack.h  sample_display_config.json  vksc_command_buffer.cpp  vksc_command_buffer.h  vksc_command_pool.cpp  vksc_command_pool.h  vksc_device.cpp  vksc_device.h  vksc_dispatchable.h  vksc_display_emulation.cpp  vksc_display_emulation.h  vksc_global.cpp  vksc_global.h  vksc_instance.cpp  vksc_instance.h  vksc_physical_device.cpp  vksc_physical_device.h  vksc_queue.cpp  vksc_queue.h  vksconvk.def
pcc/: CMakeLists.txt  README.md  pcc_builder.h  pcc_log.h  pcc_main.cpp  pcconvk.json.in
scripts/: CMakeLists.txt  RegisterComponent.in.cmake  common_ci.py  generate_source.py  known_good.json  tests.py  tests_vksc.py  update_deps.py
scripts/generators/: GeneratePCCTestData.cmake  base_generator.py  command_buffer_memory_tracker_generator.py  entry_point_generator.py  extension_helper_generator.py  generator_utils.py  output_struct_sanitizer_generator.py  pnext_chain_helper_generator.py  proc_addr_helper_generator.py  test_vkmock_framework_generator.py  test_vksc_dispatch_table_generator.py  vk_dispatch_table_generator.py  vk_dispatchable_generator.py  vulkan_object.py
tests/: CMakeLists.txt
tests/icd/: CMakeLists.txt  icd_test_defs.h  icd_test_framework.cpp  icd_test_framework.h  icd_test_pipeline_cache_utils.cpp  icd_test_pipeline_cache_utils.h  test_cleanup.cpp  test_device.cpp  test_display_emulation.cpp  test_fault_data.cpp  test_fault_reporting.cpp  test_handle_wrapping.cpp  test_infrastructure.cpp  test_memory_consumption.cpp  test_output_struct_sanitizer.cpp  test_pipeline_cache.cpp  vkmock_icd.cpp  vkmock_icd.def  vkmock_icd.json.in
tests/pcc/: CMakeLists.txt  caselist.pcc.txt
tests/pcc/data/1/: shader_0_15.vert.spv  test_name.txt
tests/pcc/data/10/: graphics_pipeline_0.json  shader_0_18.frag.spv  test_name.txt
tests/pcc/data/100/: compute_pipeline_0.json  shader_0_8.comp.spv  test_name.txt
tests/pcc/data/101/: compute_pipeline_0.json  shader_0_7.comp.spv  test_name.txt
tests/pcc/data/102/: graphics_pipeline_0.json  graphics_pipeline_1.json  shader_0_10.tesc.spv  shader_0_11.tese.spv  shader_0_9.vert.spv  shader_1_16.tese.spv  test_name.txt
tests/pcc/data/103/: compute_pipeline_0.json  shader_0_9.comp.spv  test_name.txt
tests/pcc/data/104/: compute_pipeline_0.json  shader_0_9.comp.spv  test_name.txt
tests/pcc/data/105/: graphics_pipeline_0.json  shader_0_15.vert.spv  shader_0_16.frag.spv  test_name.txt
tests/pcc/data/106/: graphics_pipeline_0.json  shader_0_7.vert.spv  shader_0_8.geom.spv  shader_0_9.frag.spv  test_name.txt
tests/pcc/data/107/: graphics_pipeline_0.json  shader_0_16.vert.spv  test_name.txt
tests/pcc/data/108/: graphics_pipeline_0.json  shader_0_16.vert.spv  test_name.txt
tests/pcc/data/109/: graphics_pipeline_0.json  shader_0_16.vert.spv  test_name.txt
tests/pcc/data/11/: graphics_pipeline_0.json  shader_0_13.vert.spv  shader_0_14.frag.spv  test_name.txt
tests/pcc/data/110/: graphics_pipeline_0.json  shader_0_16.vert.spv  test_name.txt
tests/pcc/data/111/: graphics_pipeline_0.json  shader_0_16.vert.spv  shader_0_17.frag.spv  test_name.txt
tests/pcc/data/112/: graphics_pipeline_0.json  shader_0_16.vert.spv  test_name.txt
tests/pcc/data/113/: graphics_pipeline_0.json  shader_0_16.vert.spv  shader_0_17.tesc.spv  shader_0_18.tese.spv  test_name.txt
tests/pcc/data/114/: graphics_pipeline_0.json  shader_0_17.tesc.spv  shader_0_18.tese.spv  test_name.txt
tests/pcc/data/115/: compute_pipeline_0.json  shader_0_7.comp.spv  test_name.txt
tests/pcc/data/116/: compute_pipeline_0.json  shader_0_7.comp.spv  test_name.txt
tests/pcc/data/117/: graphics_pipeline_0.json  shader_0_10.frag.spv  shader_0_9.vert.spv  test_name.txt
tests/pcc/data/118/: graphics_pipeline_0.json  shader_0_6.vert.spv  shader_0_7.frag.spv  test_name.txt
tests/pcc/data/119/: graphics_pipeline_0.json  shader_0_16.vert.spv  shader_0_17.frag.spv  test_name.txt
tests/pcc/data/12/: graphics_pipeline_0.json  shader_0_13.vert.spv  shader_0_14.frag.spv  test_name.txt
tests/pcc/data/120/: graphics_pipeline_0.json  shader_0_20.frag.spv  test_name.txt
tests/pcc/data/121/: graphics_pipeline_0.json  shader_0_17.frag.spv  test_name.txt
tests/pcc/data/122/: graphics_pipeline_0.json  shader_0_29.vert.spv  shader_0_30.frag.spv  test_name.txt
tests/pcc/data/123/: graphics_pipeline_0.json  test_name.txt
tests/pcc/data/124/: graphics_pipeline_0.json  shader_0_21.vert.spv  test_name.txt
tests/pcc/data/125/: graphics_pipeline_0.json  shader_0_22.frag.spv  test_name.txt
tests/pcc/data/126/: compute_pipeline_0.json  shader_0_14.comp.spv  test_name.txt
tests/pcc/data/127/: graphics_pipeline_0.json  shader_0_21.vert.spv  shader_0_22.frag.spv  test_name.txt
tests/pcc/data/128/: graphics_pipeline_0.json  shader_0_15.vert.spv  test_name.txt
tests/pcc/data/129/: compute_pipeline_0.json  shader_0_13.comp.spv  test_name.txt
tests/pcc/data/13/: graphics_pipeline_0.json  shader_0_13.vert.spv  shader_0_14.frag.spv  shader_0_15.tesc.spv  shader_0_16.tese.spv  shader_0_17.geom.spv  test_name.txt
tests/pcc/data/130/: graphics_pipeline_0.json  shader_0_17.vert.spv  shader_0_18.frag.spv  test_name.txt
tests/pcc/data/131/: graphics_pipeline_0.json  shader_0_17.vert.spv  test_name.txt
tests/pcc/data/132/: graphics_pipeline_0.json  shader_0_16.frag.spv  test_name.txt
tests/pcc/data/133/: graphics_pipeline_0.json  shader_0_23.vert.spv  test_name.txt
utils/: uuid.h
(+560 files in other folders)
